--- a/webapp/home.html
+++ b/webapp/home.html
@@ -22,15 +22,29 @@
 			<button id="ChooseMaps">Select</button>
 			<input type="text" name="MapID">
 			<button id="AddMap">Add</button>
+			<button id ="DeleteMap">Delete</button>
 			<div id ="log"></div>
 			<div id ="PersonnalMaps" class="Maps"></div>
+
 		</div>
 		<div id ="Shared">
 			<h2>Shared Maps</h2>
 			<button id="ChooseSharedMaps">Select</button>
 			<input type="text" name="SharedMapID">
 			<button id="AddSharedMap">Add</button>
+			<button id ="DeleteSharedMap">Delete</button>
+			<div id ="logShared"></div>
 			<div id ="MapSharedToHim"></div>
+
+		</div>
+		<div id="Map">
+			<h2 id="MapName">Name :</h2>
+			<div id = "Description">Description : </div>
+			<div id= "Status">Status : </div>
+			<div id= "Location">Locations :</div>
+			<div id="SharedWith">Shared with: </div>
+			<button id="SetMapName">Set name</button>
+			<input type="text" name="MapNameinput">
 
 		</div>
 		
