--- a/webapp/home.html
+++ b/webapp/home.html
@@ -48,8 +48,32 @@
 
 		</div>
 		
+		<div id="Event">
+			<h2>Event</h2>
+			<div id = "EventBeginning"></div>
+			<button id = "SetEventbeginning">Set Eventbegin</button>
+			<input type="LocalDateTime" name="setEventBeginning">
+			<div id = "EventEnd"></div>
+			<button id = "SetEventend">Set Eventend</button>
+			<input type="LocalDateTime" name="setEventEnd">
+			<div id = "EventName"></div>
+			<button id = "SetEventname">Set Eventname</button>
+			<input type="text" name="setEventName">
+			<div id = "EventDescription"></div>
+			<button id = "SetEventdescription">Set Eventdescription</button>
+			<input type="text" name="setEventDescription">
+			<div id = "EventAddress"></div>
+			<button id = "SetEventaddress">Set Eventadress</button>
+			<input type="text" name="setEventAddress">
+			<div id = "EventLabels"></div>
+			<button id = "SetEventlabels">Set Eventlabels</button>
+			<input type="text" name="setEventLabels">
+			<div id = "EventPhotos"></div>
+		</div>
+		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="user.js"></script>
+		<script type="text/javascript" src="event.js"></script>
 	</body>
 </html>
