--- a/webapp/home.html
+++ b/webapp/home.html
@@ -70,6 +70,7 @@
 			<input type="text" name="setEventLabels">
 			<div id = "EventPhotos"></div>
 		</div>
+		<p> Lien page Location <a href="page1.html">la page Location</a></p>
 		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
