--- a/webapp/home.html
+++ b/webapp/home.html
@@ -1,11 +1,30 @@
  <!DOCTYPE html>
 <html>
 	<body>
-		<script id="templateExample" type="text/template">
-			<div>
+		<script id="templateName" type="text/template">
+			<p>
 				<%= attribute %>
-			</div>
+			</p>
 		</script>
+		<script id="templateMap" type="text/template">
+			<p>
+				MapId : <%= id %> MapName : <%= name%>
+			</p>
+		</script>
+		<script id="templateDescription" type="text/template">
+				<%= description %>
+		</script>
+		<script id="templateLog" type="text/template">
+				<p>
+					Map with id: <%= Mapid%> is added
+				</p>
+		</script>
+		<script id="templateDelete" type="text/template">
+				<p>
+					Map with id: <%= Mapid%> is deleted
+				</p>
+		</script>
+
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<h1>GLA : Groupe 4</h1>
 		<div id="User">
@@ -17,14 +36,14 @@
 			<button id="MyMaps">My maps</button>
 			<button id ="SharedMaps">Maps Shared with me</button>
 		</div>
-		<div id="Personnal">
+		<div id="Personnal"> 	
 			<h2>Personnal Maps</h2>
 			<button id="ChooseMaps">Select</button>
 			<input type="text" name="MapID">
 			<button id="AddMap">Add</button>
 			<button id ="DeleteMap">Delete</button>
 			<div id ="log"></div>
-			<div id ="PersonnalMaps" class="Maps"></div>
+			<div id ="PersonnalMaps"></div>
 
 		</div>
 		<div id ="Shared">
@@ -70,7 +89,6 @@
 			<input type="text" name="setEventLabels">
 			<div id = "EventPhotos"></div>
 		</div>
-		<p> Lien page Location <a href="page1.html">la page Location</a></p>
 		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
