--- a/webapp/home.html
+++ b/webapp/home.html
@@ -1,6 +1,8 @@
  <!DOCTYPE html>
 <html>
 	<body>
+		<p>Location link:<a href="page1.html">location link</a></p>>
+
 		<script id="templateName" type="text/template">
 			<p>
 				<%= attribute %>
