--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -25,6 +25,19 @@
 				</p>
 		</script>
 
+		<script id="templateEvent" type="text/template">
+			<div>
+				<%= attribut %>
+			</div>
+		</script>
+		
+		<script id="templateDateTime" type="text/template">
+			<p>
+				<%= attribut %>: <%= dayOfMonth %>  <%= month %> <%= year %> .hour:   <%= hour %> : <%= minute %>
+			</p>
+		</script>
+		
+		
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<h1>GLA : Groupe 4</h1>
 		<div id="User">
