--- a/Map leaflet/lef.html
+++ b/Map leaflet/lef.html
@@ -16,5 +16,17 @@
 		<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
    		integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    		crossorigin=""></script>
+   		<!-- Esri pour la recherche de lieux-->
+   		<script src="https://unpkg.com/esri-leaflet@2.3.3/dist/esri-leaflet.js"
+  		integrity="sha512-cMQ5e58BDuu1pr9BQ/eGRn6HaR6Olh0ofcHFWe5XesdCITVuSBiBZZbhCijBe5ya238f/zMMRYIMIIg1jxv4sQ=="
+  		crossorigin=""></script>
+  		<!-- Geocoding 	-->
+  		<link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.css"
+    	integrity="sha512-IM3Hs+feyi40yZhDH6kV8vQMg4Fh20s9OzInIIAc4nx7aMYMfo+IenRUekoYsHZqGkREUgx0VvlEsgm7nCDW9g=="
+    	crossorigin="">
+  		<script src="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.js"
+    	integrity="sha512-8twnXcrOGP3WfMvjB0jS5pNigFuIWj4ALwWEgxhZ+mxvjF5/FBPVd5uAxqT8dd2kUmTVK9+yQJ4CmTmSg/sXAQ=="
+    	crossorigin=""></script>
+
 		
 	</body>
