--- a/webapp/home.html
+++ b/webapp/home.html
@@ -50,15 +50,7 @@
         <!--<form action="/action_page.php">-->
         <input id="file_chooser" type="file" onchange="encodeImageFileAsURL(this)">
         <button id="valider" >Valider</button><br/>
-        <!--</form><br/>-->
-        <!--
-        <img class="img" src="coffee.png" width="300" height="300">
-        <button id="supprimerPhoto" onclick="supprimerPhoto(0, 1)">Supprimer la photo</button> 
-        -->
-        <figure class='frame'>
-          <!--<figcaption>Image 1</figcaption>-->
-
-        </figure>
+        <figure class='frame'></figure>
 
       </div>
     </div>
@@ -187,7 +179,6 @@
     <!---------- MONJS  ---------->                       <script type="text/javascript" src="MONJS.js"></script>
     <!---------- enregistrement_marqueur.js  ---------->  <script type="text/javascript" src="enregistrement_marqueur.js"></script>
     <!---------- galerie  ---------->                     <script type="text/javascript" src="galerie.js"></script>
-    <!---------- liste.js  ---------->                    <script type="text/javascript" src="liste.js"></script>
     <!---------- MONCSS ---------->                       <link rel="stylesheet" type="text/css" href="MONCSS.css">
     <!---------- liste.css ---------->                    <link rel="stylesheet" type="text/css" href="liste.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
