--- a/webapp/login.html
+++ b/webapp/login.html
@@ -1,5 +1,8 @@
 <html>
-    
+
+ <p><a href="logo.jpg"><img src="logo.jpg" alt="logo MapEvent" align=right /></a></p>  
+ 
+                 
     <body>
         <script id="templateError" type="text/template">
             <p>
